--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "start": "ts-node main.ts"
   },
   "dependencies": {
-    "@types/unzip-stream": "^0.3.1",
     "aws-sdk": "^2.1309.0",
-    "node-gzip": "^1.1.2",
-    "unzip-stream": "^0.3.1"
+    "papaparse": "^5.3.2",
+    "string-strip-html": "8.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
-    "@types/node-gzip": "^1.1.0",
+    "@types/papaparse": "^5.3.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
