--- a/package.json
+++ b/package.json
@@ -5,17 +5,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node main.ts"
+    "start": "node index.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.1309.0",
-    "papaparse": "^5.3.2",
-    "string-strip-html": "8.4.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/papaparse": "^5.3.7",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "aws-sdk": "2.1309.0",
+    "papaparse": "5.3.2",
+    "string-strip-html": "8.4.0",
+    "@google-cloud/functions-framework": "3.1.3"
   }
 }
