--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@google-cloud/functions-framework": "3.1.3",
     "aws-sdk": "2.1309.0",
+    "luxon": "3.2.1",
     "papaparse": "5.3.2",
-    "string-strip-html": "8.4.0",
-    "@google-cloud/functions-framework": "3.1.3"
+    "string-strip-html": "8.4.0"
   }
 }
