--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.3",
     "aws-sdk": "2.1309.0",
+    "csv-to-ndjson": "^1.0.1",
     "luxon": "3.2.1",
     "papaparse": "5.3.2",
     "string-strip-html": "8.4.0"
